hphp/hack/test/typecheck/no_unset_in_strict_mode.php.exp
File "no_unset_in_strict_mode.php", line 5, characters 3-12:
In strict mode, unset is banned except on dynamic, darray, keyset, or dict indexing (Typing[4135])
